@@ -5,6 +5,8 @@ server_gid=$USER
 server_port=8000
 server_name=`hostname`
 
+DBPREFIX=$1
+
 test_root=$currentpath/work/httpd
 test_root_esc=`echo ${test_root} | sed -e 's/\\//\\\\\\//g'`
 
@@ -22,20 +24,20 @@ fi
 cp ../.libs/libmodnss.so ${test_root}/lib
 cp ../nss_pcache ${test_root}/bin
 
-bash ../gencert ${test_root}/alias
+bash ../gencert ${DBPREFIX}${test_root}/alias
 echo internal:httptest > ${test_root}/conf/password.conf
 
 # Export the CA cert
-certutil -L -d ${test_root}/alias -n cacert -a > ${test_root}/alias/ca.pem
+certutil -L -d ${DBPREFIX}${test_root}/alias -n cacert -a > ${test_root}/alias/ca.pem
 
 # Export the client cert
 cd ${test_root}
 echo password > pw
 echo httptest > dbpw
-pk12util -o alpha.p12 -d alias -n alpha -w pw -k dbpw
+pk12util -o alpha.p12 -d ${DBPREFIX}${test_root}/alias -n alpha -w pw -k dbpw
 openssl pkcs12  -in alpha.p12 -clcerts -nokeys -out alpha.crt -passin pass:`cat pw`
 openssl pkcs12  -in alpha.p12 -nocerts -nodes -out alpha.key -passin pass:`cat pw`
-pk12util -o beta.p12 -d alias -n beta -w pw -k dbpw
+pk12util -o beta.p12 -d ${DBPREFIX}${test_root}/alias -n beta -w pw -k dbpw
 openssl pkcs12  -in beta.p12 -clcerts -nokeys -out beta.crt -passin pass:`cat pw`
 openssl pkcs12  -in beta.p12 -nocerts -nodes -out beta.key -passin pass:`cat pw`
 /bin/rm -f pw dbpw
