@@ -1,12 +1,15 @@
+2014-10-28  Rob Crittenden <rcritten@redhat.com>
+    * Add support for sqlite NSS databases (#1057650)
+
 2014-10-22  Stanislav Tokos <stokos@suse.de>
     * Compare subject CN and VS hostname during server start up
 
-2014-10-16  Rob Crittenden <rcritten@redhat.com
+2014-10-16  Rob Crittenden <rcritten@redhat.com>
     * Add support for enabling TLS v1.2
     * Don't enable SSL 3 by default (CVE-2014-3566)
     * Improve protocol testing
 
-2014-02-20  Rob Crittenden <rcritten@redhat.com
+2014-02-20  Rob Crittenden <rcritten@redhat.com>
     * Sync with Fedora builds which were basicaly the defacto upstream.
     * Add nss_pcache man page
     * Fix CVE-2013-4566
